# fc-microvideos

./: .gitignore  .pylintrc  Dockerfile  README.md  api.http  docker-compose.yaml  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json  docker-compose.yml
envs/: .env.e2e.example  .env.example  .env.test.example
src/: __init__.py
src/__seedwork/application/: usecases.py
src/__seedwork/domain/: entities.py  exceptions.py  repositories.py  validators.py  value_objects.py
src/__seedwork/tests/: test_unit_value_object.py
src/__seedwork/tests/integrations/: test_int_validators.py
src/__seedwork/tests/unit/: test_repositories.py  test_unit_usecase.py  test_unit_validators.py  test_unit_value_object.py
src/category/application/: dto.py  usecase.py
src/category/domain/: entities.py  repositories.py  validators.py
src/category/infra/: repositories.py
src/category/tests/application/: test_unit_usecases.py
src/category/tests/domain/: test_entities.py  test_int_entities.py  test_unit_validators.py
src/category/tests/infra/: test_int_repositories.py
src/core/: pytest_plugin.py
src/core/__seedwork/application/: dto.py  usecases.py
src/core/__seedwork/domain/: entities.py  exceptions.py  repositories.py  validators.py  value_objects.py
src/core/__seedwork/infra/: serializers.py  testing_helpers.py
src/core/__seedwork/tests/integrations/: test_int_validators.py
src/core/__seedwork/tests/unit/: test_repositories.py  test_unit_usecase.py  test_unit_validators.py  test_unit_value_object.py
src/core/category/application/: dto.py  usecase.py
src/core/category/domain/: entities.py  entities_faker_builder.py  repositories.py  validators.py
src/core/category/infra/: mapper.py  repositories.py  serializer.py
src/core/category/tests/application/: test_int_usecases.py  test_unit_usecases.py
src/core/category/tests/domain/: test_entities.py  test_int_entities.py  test_unit_entities_faker_builder.py  test_unit_validators.py
src/core/category/tests/infra/: test_int_repositories.py
src/django_app/: config.py  container.py  exception_handler.py  manage.py  settings.py  urls.py
src/django_app/category/: admin.py  api.py  models.py  repositories.py  urls.py
src/django_app/category/migrations/: 0001_initial.py
src/django_app/category/tests/: helpers.py  test_int_mapper.py  test_int_models.py  test_int_repository.py  test_unit_api.py
src/django_app/category/tests/api/: helpers.py  test_int_common_methods.py  test_int_delete.py  test_int_get.py  test_int_post.py  test_int_put.py
src/django_app/category/tests/fixture/: categories_api_fixtures.py
uml/: class-diagram.wsd
uml/usecases/: category.usecase.wsd
(+5 files in other folders)
