[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=2.0.2",
    "pylint>=2.17.2",
    "pytest>=7.3.1",
]

[project]
name = "micro-videos"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo Figueiredo", email = "gustavohmfigueiredo@gmail.com"},
]
dependencies = [
    "djangorestframework>=3.14.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
