[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=2.0.2",
    "pylint>=2.17.2",
    "pytest>=7.3.1",
    "pytest-cov>=4.0.0",
    "pytest-django>=4.5.2",
    "model-bakery>=1.11.0",
    "faker>=18.10.1",
]

[project]
name = "micro-videos"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo Figueiredo", email = "gustavohmfigueiredo@gmail.com"},
]
dependencies = [
    "djangorestframework>=3.14.0",
    "django>=4.2.1",
    "django-extensions>=3.2.1",
    "dependency-injector>=4.41.0",
    "pydantic[dotenv]>=1.10.9",
    "dj-database-url>=2.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
test="pytest src"
pytest="pytest src"
test_cov="pytest src --cov ./src"
test_html="pytest src --cov ./src --cov-report html:./__coverage"
ci_test="pytest src --cov ./src --cov-fail-under 80"
lint="pylint ./src"
pylint="pylint ./src"
formatter="autopep8 --in-place --recursive ./src"
server="pdm run manage runserver 0.0.0.0:8000"
manage="python ./src/django_app/manage.py"

[tool.autopep8]
max_line_length = 100
in-place = true
recursive = true

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
